# soap-apis-spyne

./: Readme.md  note.txt
finance-soap-suite/: pyproject.toml  requirements.txt
finance-soap-suite/finance_soap/: config.py  repository.py  schemas.py  server.py  services.py
